--- a/cp2324t.tex
+++ b/cp2324t.tex
@@ -891,8 +891,32 @@ que sejam necessárias.
 \textbf{Importante}: Não pode ser alterado o texto deste ficheiro fora deste anexo.
 
 \subsection*{Problema 1}
+% rever texto
 
-% chupar pika intensa ao jno
+     Para resolver este problema, chegamos á conclusão que tinhamos que guardar a primeira linha da matrix e depois rodar a 
+matrix 90 graus no sentido anti-horário e repetir o processo até que a matrix ficasse vazia.
+
+     Primeiramente, definimos a função rotate, que é a base para a construção da espiral. 
+Esta função realiza duas operações principais em sequência: a transposição da matriz (transpose), 
+que troca as suas linhas por colunas, seguida pela inversão de cada nova linha (reverse). 
+O resultado é uma rotação de noventa graus no sentido anti-horário.
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{rotate}\mathbin{::}\Conid{Eq}\;\Varid{a}\Rightarrow [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]\to [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\Varid{rotate}\mathrel{=}\Varid{reverse}\comp \Varid{transpose}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+     O núcleo da nossa estratégia é a função anaRotate, um anamorfismo que emprega a rotate 
+em cada passo recursivo. Utilizando o combinador (id + id x rotate), que aplica a função 
+rotate ao resto da matriz apos separar a primeira linha. A cada iteração, anaRotate acumula 
+a primeira linha da matriz transformada, construindo assim uma lista de listas, onde 
+cada sublista representa uma camada da espiral.
+O diagrama de anamorfismo abaixo visualiza este processo.
+
 
 
 \begin{eqnarray*}
@@ -905,21 +929,25 @@ que sejam necessárias.
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{rotate}\mathbin{::}\Conid{Eq}\;\Varid{a}\Rightarrow [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]\to [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]{}\<[E]%
-\\
-\>[B]{}\Varid{rotate}\mathrel{=}\Varid{reverse}\comp \Varid{transpose}{}\<[E]%
-\\[\blanklineskip]%
 \>[B]{}\Varid{anaRotate}\mathbin{::}\Conid{Eq}\;\Varid{a}\Rightarrow [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]\to [\mskip1.5mu [\mskip1.5mu \Varid{a}\mskip1.5mu]\mskip1.5mu]{}\<[E]%
 \\
 \>[B]{}\Varid{anaRotate}\mathrel{=}\anaList{(\Varid{id}+\Varid{id}\times\Varid{rotate})\comp \Varid{outList}}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
+Para alcançar a representação final da matriz em espiral, utilizamos a função concat, 
+que concatena todas as sublistas numa única lista. O diagrama a seguir ilustra a 
+aplicação de concat à estrutura produzida por anaRotate, resultando na lista final que pertendemos obter com a função matrot.
+
 \begin{eqnarray*}
 \xymatrix@C=3cm @R=2cm{
-  ((\ensuremath{\Conid{A}})^*)^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{matrot}}}\ar[r]^(0.50){\ensuremath{\Varid{anaRotate}}} & ((\ensuremath{\Conid{A}})^*)^*\ar[r]^(0.50){\ensuremath{\Varid{concat}}} & (\ensuremath{\Conid{A}})^*
+     ((\ensuremath{\Conid{A}})^*)^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{matrot}}}\ar[r]^(0.50){\ensuremath{\Varid{anaRotate}}} & ((\ensuremath{\Conid{A}})^*)^*\ar[r]^(0.50){\ensuremath{\Varid{concat}}} & (\ensuremath{\Conid{A}})^*
 }
 \end{eqnarray*}
+
+A função matrot é definida como a composição de concat e anaRotate. Esta única linha de 
+Haskell encapsula todo o processo de transformação da matriz original para a lista espiralada, 
+como demonstrado pela equivalência a seguir.
 
 \begin{eqnarray*}
 \start
@@ -927,7 +955,6 @@ que sejam necessárias.
 \just\equiv{ (72); (73) }
 \ensuremath{\Varid{matrot}\mathrel{=}\Varid{concat}\;(\Varid{anaRotate})}
 \end{eqnarray*}
-
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -942,16 +969,69 @@ que sejam necessárias.
 
 \subsection*{Problema 2}
 
+%isVowel = oneOf "AEIOUaeiouÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚàáâãèéêìíòóôõùúĨĩŨũẼẽ"
+
+\begin{eqnarray*}
+\xymatrix@C=3cm @R=2cm{
+     \mathbb{(\ensuremath{\Conid{A}})^*}\ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{anaReverse}}} & 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[r]^{id + ifp} & 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[d]^{id +id \times{\ensuremath{\Varid{anaReverse}}}} \\
+     A^* && 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[ll]^{ in_{Listas}} 
+ }
+\end{eqnarray*}
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{6}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{11}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{16}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{36}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{anaReverse}\mathbin{::}\Conid{Eq}\;\Varid{a}\Rightarrow [\mskip1.5mu \Varid{a}\mskip1.5mu]\to [\mskip1.5mu \Varid{a}\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\Varid{anaReverse}\mathrel{=}\anaList{(\Varid{id}+\Varid{ifp})\comp \Varid{outList}}{}\<[E]%
+\\
+\>[B]{}\hsindent{6}{}\<[6]%
+\>[6]{}\mathbf{where}{}\<[E]%
+\\
+\>[6]{}\hsindent{5}{}\<[11]%
+\>[11]{}\Varid{ifp}{}\<[16]%
+\>[16]{}\mathrel{=}\mcond{\Varid{p}\comp \p1}{{}\<[36]%
+\>[36]{}\conj{\Varid{last}}{\Varid{init}}\comp \p2}{\Varid{id}}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+% diagrama do pre
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{pre}\mathbin{::}{}\<[E]%
+\\
+\>[B]{}\Varid{pre}\mathrel{=}\mathsf{conc}\comp \conj{\Varid{id}}{\Varid{filter}\;\Varid{isVowel}}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+\begin{eqnarray*}
+\xymatrix@C=3cm @R=2cm{
+     (\ensuremath{\Conid{A}})^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{reverseByPredicate}}}\ar[r]^(0.50){\ensuremath{\Varid{pre}}} & (\ensuremath{\Conid{A}})^*\ar[r]^(0.50){\ensuremath{\Varid{anaReverse}}} & (\ensuremath{\Conid{A}})^*
+}
+\end{eqnarray*}
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{reverseByPredicate}\mathbin{::}(\Varid{a}\to \Conid{Bool})\to [\mskip1.5mu \Varid{a}\mskip1.5mu]\to [\mskip1.5mu \Varid{a}\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\Varid{reverseByPredicate}\;\Varid{p}\mathrel{=}\Varid{anaReverse}\comp \Varid{pre}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
 \>[B]{}\Varid{reverseVowels}\mathbin{::}\Conid{String}\to \Conid{String}{}\<[E]%
 \\
-\>[B]{}\Varid{reverseVowels}\mathrel{=}\bot {}\<[E]%
-\\[\blanklineskip]%
-\>[B]{}\Varid{reverseByPredicate}\mathbin{::}(\Varid{a}\to \Conid{Bool})\to [\mskip1.5mu \Varid{a}\mskip1.5mu]\to [\mskip1.5mu \Varid{a}\mskip1.5mu]{}\<[E]%
-\\
-\>[B]{}\Varid{reverseByPredicate}\;\Varid{p}\mathrel{=}\bot {}\<[E]%
+\>[B]{}\Varid{reverseVowels}\mathrel{=}\Varid{reverseByPredicate}\;\Varid{isVowel}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
@@ -974,6 +1054,13 @@ que sejam necessárias.
 \>[B]{}\Varid{start}\mathrel{=}\bot {}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+
+
+
+
+
+
+
 
 \subsection*{Problema 4}
 
