--- a/cp2324t.tex
+++ b/cp2324t.tex
@@ -1051,9 +1051,6 @@ próximo elemento da lista.
 \ColumnHook
 \end{hscode}\resethooks
 
-
-
-
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1084,14 +1081,102 @@ Como tal,
 
 \subsection*{Problema 3}
 
+Começamos por analisar a diferença entre duas iterações consecutivas do somatório:
+
+\begin{align}
+     iteração k &= \frac{x^{(2k+1)}}{(2k+1)!} \
+\end{align}
+
+\begin{align}
+     iteração (k+1) &= \frac{x^{(2(k+1)+1)}}{(2(k+1)+1)!} \
+     &= \frac{x^{(2k+3)}}{(2k+3)!} \
+     &= \frac{x^{(2k+1)} \times x^2}{(2k+3)(2k+2)(2k+1)!}
+\end{align}
+
+Como podemos ver, a diferença entre duas iterações consecutivas corresponde a multiplicação do elemento anterior com o valor 
+$\frac{x^2}{(2k+3)(2k+2)}$​, o que nos permite calcular o próximo elemento a partir do anterior de maneira eficiente.
+
+Nesta função guardamos num acumulador o somatório até à iteração atual, o valor da iteração anterior e o número da iteração. 
+
+No caso de paragem temos a função start que retorna um acumulador com os valores iniciais para a iteração 0, ou seja, ((x,x),0).
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{start}\mathbin{::}\Conid{Num}\;\Varid{b1}\Rightarrow \Varid{b2}\to ((\Varid{b2},\Varid{b2}),\Varid{b1}){}\<[E]%
+\\
+\>[B]{}\Varid{start}\;\Varid{x}\mathrel{=}((\Varid{x},\Varid{x}),\mathrm{0}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+\clearpage
+Nos restantes casos, a função loop recebe o acumulador e retorna um novo acumulador com os valores atualizados.
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{9}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{den2}\mathbin{::}\Conid{Num}\;\Varid{a}\Rightarrow \Varid{a}\to \Varid{a}{}\<[E]%
+\\
+\>[B]{}\Varid{den2}\;\Varid{i}{}\<[9]%
+\>[9]{}\mathrel{=}(\mathrm{2}\mathbin{*}\Varid{i}\mathbin{+}\mathrm{2})\mathbin{*}(\mathrm{2}\mathbin{*}\Varid{i}\mathbin{+}\mathrm{3}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{9}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{num2}\mathbin{::}\Conid{Num}\;\Varid{a}\Rightarrow \Varid{a}\to \Varid{a}{}\<[E]%
+\\
+\>[B]{}\Varid{num2}\;\Varid{x}{}\<[9]%
+\>[9]{}\mathrel{=}\Varid{x}\mathbin{\uparrow}\mathrm{2}{}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{5}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{7}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{9}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{17}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{24}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{loop}\mathbin{::}\Conid{Fractional}\;\Varid{b}\Rightarrow \Varid{b}\to ((\Varid{b},\Varid{b}),\Varid{b})\to ((\Varid{b},\Varid{b}),\Varid{b}){}\<[E]%
+\\
+\>[B]{}\Varid{loop}\;{}\<[7]%
+\>[7]{}\Varid{x}\;((\Varid{s},\Varid{p}),\Varid{i})\mathrel{=}((\Varid{s}\mathbin{+}\Varid{conta},\Varid{conta}),\Varid{i}\mathbin{+}\mathrm{1}){}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\mathbf{where}\;\Varid{conta}\mathrel{=}\Varid{p}\mathbin{*}{}\<[24]%
+\>[24]{}(\Varid{num2}\;\Varid{x}\mathbin{/}\Varid{den2}\;\Varid{i}){}\<[E]%
+\ColumnHook
+\end{hscode}\resethooks
+
+\begin{eqnarray*}
+\xymatrix@C=7cm @R=2cm{
+     \N_0 \ar[r]^{out_{\N_0}}\ar[d]_{\ensuremath{\Varid{worker}}} & 1+ \N_0\ar[d]^{id +\ensuremath{\Varid{worker}}} \\
+     (\N_0 \times{\N_0}) \times{\N_0} & 1+ (\N_0 \times{\N_0}) \times{\N_0}\ar[l]^{\ensuremath{\alt{\underline{\Varid{start}}}{\Varid{loop}}}} 
+}
+\end{eqnarray*}
+
+\begin{eqnarray*}
+\start
+\ensuremath{\Varid{worker}\mathrel{=}\for{\Varid{loop}\;\Varid{x}}\ {\Varid{start}\;\Varid{x}}}
+\just\equiv{ Def ciclo-for }
+\ensuremath{\Varid{worker}\mathrel{=}\llparenthesis\, \alt{\underline{\Varid{start}}}{\Varid{loop}}\,\rrparenthesis}
+\end{eqnarray*}
+
+
+Para devolver o valor do somatório, a função wrapper recebe o acumulador e retorna o valor do somatório, 
+ou seja, o primeiro elemento do acumulador.
+
+
+\begin{hscode}\SaveRestoreHook
+\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{5}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{9}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{17}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
+\>[B]{}\Varid{snh}\mathbin{::}(\Conid{Integral}\;\Varid{a},\Conid{Fractional}\;\Varid{b})\Rightarrow \Varid{b}\to \Varid{a}\to \Varid{b}{}\<[E]%
+\\
 \>[B]{}\Varid{snh}\;\Varid{x}\mathrel{=}\Varid{wrapper}\comp \Varid{worker}{}\<[E]%
 \\
 \>[B]{}\hsindent{5}{}\<[5]%
@@ -1103,24 +1188,8 @@ Como tal,
 \\
 \>[5]{}\hsindent{4}{}\<[9]%
 \>[9]{}\Varid{wrapper}\mathrel{=}\p1\comp \p1{}\<[E]%
-\\[\blanklineskip]%
-\>[B]{}\Varid{loop}\;{}\<[7]%
-\>[7]{}\Varid{x}\;((\Varid{s},\Varid{p}),\Varid{i})\mathrel{=}((\Varid{s}\mathbin{+}\Varid{conta},\Varid{conta}),\Varid{i}\mathbin{+}\mathrm{1}){}\<[E]%
-\\
-\>[B]{}\hsindent{5}{}\<[5]%
-\>[5]{}\mathbf{where}\;\Varid{conta}\mathrel{=}\Varid{p}\mathbin{*}{}\<[24]%
-\>[24]{}(\Varid{num2}\;\Varid{x}\mathbin{/}\Varid{den2}\;\Varid{i}){}\<[E]%
-\\[\blanklineskip]%
-\>[B]{}\Varid{start}\;\Varid{x}\mathrel{=}((\Varid{x},\Varid{x}),\mathrm{0}){}\<[E]%
-\\[\blanklineskip]%
-\>[B]{}\Varid{den2}\;\Varid{i}{}\<[9]%
-\>[9]{}\mathrel{=}(\mathrm{2}\mathbin{*}\Varid{i}\mathbin{+}\mathrm{2})\mathbin{*}(\mathrm{2}\mathbin{*}\Varid{i}\mathbin{+}\mathrm{3}){}\<[E]%
-\\
-\>[B]{}\Varid{num2}\;\Varid{x}{}\<[9]%
-\>[9]{}\mathrel{=}\Varid{x}\mathbin{\uparrow}\mathrm{2}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-
 
 \subsection*{Problema 4}
 
@@ -1198,15 +1267,39 @@ Para auxiliar a geração da base de dados probabilística, criamos 3 funções 
 \>[B]{}\Varid{lka}\;\Varid{k}\mathrel{=}\map \;\p2\comp \Varid{filter}\;((\equiv \Varid{k})\comp \p1){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+	
 \item A função mkdist faz o sumário estatístico de uma qualquer lista finita, gerando a distribuição de ocorrência dos seus elementos.
+     Começamos por aplicar a função map, de forma a obter uma lista de tuplos com o elemento e a sua percentagem de ocorrências.
+     De seguida aplicamos a função nub, que remove os elementos repetidos da lista, e por fim aplicamos a D que transforma a lista de tuplos numa distribuição.
+     
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{5}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{9}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{12}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{13}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{54}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
 \>[B]{}\Varid{mkdist}\mathbin{::}\Conid{Eq}\;\Varid{a}\Rightarrow [\mskip1.5mu \Varid{a}\mskip1.5mu]\to \fun{Dist}\;\Varid{a}{}\<[E]%
 \\
-\>[B]{}\Varid{mkdist}\mathrel{=}\Varid{uniform}{}\<[E]%
+\>[B]{}\Varid{mkdist}\;\Varid{l}\mathrel{=}{}\<[13]%
+\>[13]{}\Conid{D}\mathbin{\$}\Varid{nub}\mathbin{\$}\map \;((\Varid{id}\times\Varid{divide})\comp \Varid{dup})\;{}\<[54]%
+\>[54]{}\Varid{l}{}\<[E]%
+\\
+\>[B]{}\hsindent{5}{}\<[5]%
+\>[5]{}\mathbf{where}{}\<[E]%
+\\
+\>[5]{}\hsindent{4}{}\<[9]%
+\>[9]{}\Varid{divide}\;\Varid{x}\mathrel{=}\Varid{fromIntegral}\;(\Varid{n}\;\Varid{x}\;\Varid{l})\mathbin{/}\Varid{fromIntegral}\;\Varid{t}{}\<[E]%
+\\
+\>[5]{}\hsindent{4}{}\<[9]%
+\>[9]{}\Varid{t}{}\<[12]%
+\>[12]{}\mathrel{=}\length \;\Varid{l}{}\<[E]%
+\\[\blanklineskip]%
+\>[B]{}\Varid{n}\;\Varid{x}\mathrel{=}\length \comp \Varid{filter}\;(\equiv \Varid{x}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+
 \item A função mksd começa por aplicar a função lka aos dados, de forma a obter uma lista com os atrasos de um determinado segmento, de seguida aplica a mkdist a essa lista, obtendo assim a distribuição de ocorrência dos atrasos desse segmento.
 % mksd (S0, S1) -> ((S0,S1), 0 40.0% 3 40.0% 2 20.0%)
 \begin{hscode}\SaveRestoreHook
@@ -1261,6 +1354,14 @@ devolve a sua distribuição de atrasos.
 função probabilística deverá informar qualquer utente que queira ir da paragem a até à paragem b de uma dada
 linha sobre a probabilidade de atraso acumulado no total do percurso [a ..b].
 
+
+\begin{eqnarray*}
+\xymatrix@C=7cm @R=2cm{
+     Segment^* \ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{somatorio}}} & 1+Segment\times{Segment^*}\ar[d]^{id +id \times{\ensuremath{\Varid{somatorio}}}} \\
+     Dist Delay & 1+Segment \times{Dist Delay}\ar[l]^{\ensuremath{\alt{\underline{\Varid{instantaneous}}}{\uncurry{(\Varid{joinWith}\;(\mathbin{+})\comp \Varid{delay})}}}} 
+}
+\end{eqnarray*}
+
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1269,14 +1370,6 @@ linha sobre a probabilidade de atraso acumulado no total do percurso [a ..b].
 \>[B]{}\Varid{somatorio}\mathrel{=}\llparenthesis\, \alt{\underline{\Varid{instantaneous}}}{\uncurry{(\Varid{joinWith}\;(\mathbin{+})\comp \Varid{delay})}}\,\rrparenthesis{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-
-\begin{eqnarray*}
-\xymatrix@C=7cm @R=2cm{
-  Segment^* \ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{somatorio}}} & 1+Segment\times{Segment^*}\ar[d]^{id +id \times{\ensuremath{\Varid{somatorio}}}} \\
-  Dist Delay & 1+Segment \times{Dist Delay}\ar[l]^{\ensuremath{\alt{\underline{\Varid{instantaneous}}}{\uncurry{(\Varid{joinWith}\;(\mathbin{+})\comp \Varid{delay})}}}} 
- }
-\end{eqnarray*}
-
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
