--- a/cp2324t.tex
+++ b/cp2324t.tex
@@ -918,8 +918,8 @@ O diagrama de anamorfismo abaixo visualiza este processo.
 
 \begin{eqnarray*}
 \xymatrix@C=3cm @R=2cm{
-     \mathbb{((\ensuremath{\Conid{A}})^*)^*}\ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{anaRotate}}} & 1 + A^* \times{\mathbb{((\ensuremath{\Conid{A}})^*)^*}}\ar[r]^{id + id \times{\mathbb{\ensuremath{\Varid{rotate}}}} } & 1 + A^* \times{\mathbb{((\ensuremath{\Conid{A}})^*)^*}}\ar[d]^{id +id \times{\ensuremath{\Varid{anaRotate}}}} \\
-     (A^*)^* && 1 + A^* \times{\mathbb{((\ensuremath{\Conid{A}})^*)^*}}\ar[ll]^{ in_{Listas}} 
+     \mathbb{(\ensuremath{\Conid{A}}^*)^*}\ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{anaRotate}}} & 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}}^*)^*}}\ar[r]^{id + id \times{\mathbb{\ensuremath{\Varid{rotate}}}} } & 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}}^*)^*}}\ar[d]^{id +id \times{\ensuremath{\Varid{anaRotate}}}} \\
+     (A^*)^* && 1 + A^* \times{\mathbb{(\ensuremath{\Conid{A}}^*)^*}}\ar[ll]^{ in_{Listas}} 
  }
 \end{eqnarray*}
 
@@ -939,7 +939,7 @@ final que pertendemos obter com a função matrot.
 
 \begin{eqnarray*}
 \xymatrix@C=3cm @R=2cm{
-     ((\ensuremath{\Conid{A}})^*)^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{matrot}}}\ar[r]^(0.50){\ensuremath{\Varid{anaRotate}}} & ((\ensuremath{\Conid{A}})^*)^*\ar[r]^(0.50){\ensuremath{\Varid{concat}}} & (\ensuremath{\Conid{A}})^*
+     (\ensuremath{\Conid{A}}^*)^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{matrot}}}\ar[r]^(0.50){\ensuremath{\Varid{anaRotate}}} & (\ensuremath{\Conid{A}}^*)^*\ar[r]^(0.50){\ensuremath{\Varid{concat}}} & \ensuremath{\Conid{A}}^*
 }
 \end{eqnarray*}
 
@@ -1022,8 +1022,8 @@ próximo elemento da lista.
 
 \begin{eqnarray*}
 \xymatrix@C=3cm @R=2cm{
-     \mathbb{(\ensuremath{\Conid{A}})^*}\ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{anaReverse}}} & 1 + A \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[r]^{id + ifp} & 1 + A \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[d]^{id +id \times{\ensuremath{\Varid{anaReverse}}}} \\
-     (\ensuremath{\Conid{A}})^* && 1 + A \times{\mathbb{(\ensuremath{\Conid{A}})^*}}\ar[ll]^{ in_{Listas}} 
+     \mathbb{\ensuremath{\Conid{A}}^*}\ar[r]^{out_{Listas}}\ar[d]_{\ensuremath{\Varid{anaReverse}}} & 1 + A \times{\mathbb{\ensuremath{\Conid{A}}^*}}\ar[r]^{id + ifp} & 1 + A \times{\mathbb{\ensuremath{\Conid{A}}^*}}\ar[d]^{id +id \times{\ensuremath{\Varid{anaReverse}}}} \\
+     \ensuremath{\Conid{A}}^* && 1 + A \times{\mathbb{\ensuremath{\Conid{A}}^*}}\ar[ll]^{ in_{Listas}} 
  }
 \end{eqnarray*}
 
@@ -1066,7 +1066,7 @@ Como tal,
 
 \begin{eqnarray*}
 \xymatrix@C=3cm @R=2cm{
-     (\ensuremath{\Conid{A}})^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{reverseByPredicate}}}\ar[r]^(0.50){\ensuremath{\Varid{pre}}} & (\ensuremath{\Conid{A}})^*\ar[r]^(0.50){\ensuremath{\Varid{anaReverse}}} & (\ensuremath{\Conid{A}})^*
+     \ensuremath{\Conid{A}}^*\ar@/_1.5pc/[rr]_{\ensuremath{\Varid{reverseByPredicate}}}\ar[r]^(0.50){\ensuremath{\Varid{pre}}} & \ensuremath{\Conid{A}}^*\ar[r]^(0.50){\ensuremath{\Varid{anaReverse}}} & \ensuremath{\Conid{A}}^*
 }
 \end{eqnarray*}
 
@@ -1350,10 +1350,21 @@ devolve a sua distribuição de atrasos.
 \ColumnHook
 \end{hscode}\resethooks
 
+A pdelay é uma função probabilística que deverá informar qualquer utente que queira ir da paragem a até à paragem b de uma dada
+linha sobre a probabilidade de atraso acumulado no total do percurso [a..b].
 
-função probabilística deverá informar qualquer utente que queira ir da paragem a até à paragem b de uma dada
-linha sobre a probabilidade de atraso acumulado no total do percurso [a ..b].
+Esta função recebe duas paragens e devolve a distribuição de atrasos acumulados entre as mesmas.
+De modo a realizarmos o pretendido, começamos por calcular a lista de segmentos de todas as 
+paragens entre as duas paragens dadas.
 
+Para tal, utilizámos a função enumFromTo que devolve uma lista com todas as paragens entre a e b,
+de seguida aplicamos um split id tail e juntamos para obter a lista de segmentos entre essas duas paragens.
+
+Posteriormente, aplicamos a função somatorio que recebe a lista de segmentos 
+e devolve a distribuição de atrasos acumulados entre os mesmos.
+
+Esta função aplica a cada segmento a função delay e soma essa distribuição
+com a distribuição de atrasos do resto do percurso que foi calculada recursivamente pelo catamorfismo.
 
 \begin{eqnarray*}
 \xymatrix@C=7cm @R=2cm{
